# practical-haskell

./: .gitignore  build.zig  default.nix  ghcid.sh  hie.yaml  myfirstapp.cabal  practical-haskell.cabal  send.py  shell.nix  test.ts
app/: Main.hs  Parser.hs  People.hs
app/Api/: Query.hs  Server.hs  Structure.hs
app/Github/: Request.hs
lua/: bench.lua
scalaz_working/: build.sbt
scalaz_working/.bsp/: sbt.json
scalaz_working/src/main/scala/: Main.scala
src/: main.zig
